force-app/main/default/objects/Seating_Info__c/Seating_Info__c.object-meta.xml
<CustomObject>
    <description>座位信息图片维护</description>
    <label>Seating Info</label>
    <nameField>
        <label>Seating Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seating Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>