force-app/main/default/objects/Seating_Info__c/fields/CoverImgContentBodyId__c.field-meta.xml
<CustomField>
    <fullName>CoverImgContentBodyId__c</fullName>
    <description>图片</description>
    <label>CoverImgContentBodyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>