force-app/main/default/objects/Seating_Info__c/fields/Person_Categories__c.field-meta.xml
<CustomField>
    <fullName>Person_Categories__c</fullName>
    <label>Person Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>领导/Leader</fullName>
            </value>
            <value>
                <fullName>表彰/Commend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>